--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    // "declaration": true,
+    // "declarationDir": "lib",
     "target": "ESNext",
     "useDefineForClassFields": true,
     "noImplicitAny": false, // 隐式具有“any”类型
