--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "基于vue3和element-plus的二次封装组件、文档",
   "author": "landwind",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.4",
   "main": "dist/lib/packages/index.js", 
   "module": "dist/es/packages/index.js", 
   "types": "dist/es/packages/index.d.ts", 
@@ -44,8 +44,8 @@
     "axios": "^1.7.3",
     "chalk": "^5.3.0",
     "consola": "^3.2.3",
-    "echarts": "^5.5.1",
     "element-plus": "^2.7.8",
+    "echarts": "^5.5.1", 
     "escape-html": "^1.0.3",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
@@ -74,8 +74,9 @@
     "vue-tsc": "^2.0.24",
     "vuedraggable": "^4.1.0"
   },
-  "dependencies": {
-    
+  "peerDependencies": {
+    "vue": "^3.4.31",
+    "element-plus": "^2.7.8"
   },
   "repository": {
     "type": "git",
