fix: 修复组件导出

--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,vue}": [
       "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./",
-      "stylelint --fix \"packages/components/src/**/*.{css,less}\""
+      "stylelint --fix \"packages/components/src/**/*.{css,scss}\""
     ]
   },
   "scripts": {
     "docs:dev": "pnpm run --filter site docs:dev",
     "docs:build": "pnpm run --filter site docs:build",
     "docs:deploy": "pnpm run --filter site docs:deploy",
-    "build:components": "gulp -f packages/components/script/build/index.ts & pnpm run --filter ./packages/utils build",
-    "publish:components": "gulp -f packages/components/script/publish/index.ts",
-    "publish:utils": "gulp -f packages/utils/publish/index.ts",
+    "build:components:old": "gulp -f packages/components/script/build/index.ts --require sucrase/register/ts & pnpm run --filter ./packages/utils build",
+    "build:components": "pnpm run --filter ./packages/components build & pnpm run --filter ./packages/utils build",
+    "publish:components": "gulp -f packages/components/script/publish/index.ts --require sucrase/register/ts",
+    "publish:utils": "gulp -f packages/utils/publish/index.ts --require sucrase/register/ts",
     "play:dev": "pnpm run --filter ./play dev",
     "lint:script": "eslint --ext .js,.jsx,.vue,.ts,.tsx --fix --quiet ./",
-    "lint:style": "stylelint --fix \"packages/components/src/**/*.{css,less}\"",
+    "lint:style": "stylelint --fix \"packages/components/src/**/*.{css,scss}\"",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
     "type-check": "vue-tsc --noEmit"
@@ -50,13 +51,13 @@
     "consola": "^3.2.3",
     "echarts": "^5.5.1",
     "escape-html": "^1.0.3",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
     "gulp": "^5.0.0",
-    "gulp-autoprefixer": "^9.0.0",
-    "gulp-less": "^5.0.0",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-sass": "^5.1.0",
     "husky": "^9.1.5",
     "jsencrypt": "3.0.0-rc.1",
     "lint-staged": "^15.2.9",
@@ -65,13 +66,16 @@
     "minimist": "^1.2.8",
     "normalize.css": "^8.0.1",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.3.3",
+    "prettier": "^2.8.8",
     "release-it": "^17.6.0",
     "sass": "^1.77.8",
     "sass-loader": "^16.0.0",
     "sortablejs": "^1.15.0",
+    "sucrase": "^3.35.0",
     "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.11.2",
+    "unplugin-auto-import": "^0.11.5",
+    "unplugin-element-plus": "^0.8.0",
+    "unplugin-vue-components": "^0.27.4",
     "vite": "^5.3.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-dts": "^1.7.3",
