--- a/play/package.json
+++ b/play/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@lw8/lw-vue-plus": "workspace: *",
+    "@lw8/lw-vue-plus": "workspace:^",
     "element-plus": "^2.8.1",
     "vue": "^3.4.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
     "typescript": "^5.5.3",
+    "unplugin-vue-define-options": "^1.4.9",
     "vite": "^5.4.1",
     "vue-tsc": "^2.0.29"
   }
