--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,13 +5,13 @@
   "private": false,
   "type": "module",
   "version": "1.0.0",
-  "main": "./index.ts",
+  "main": "./index.ts", 
   "scripts": {
     "build": "vite build",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
-  "devDependencies": { 
+  "devDependencies": {
     "@vitest/coverage-v8": "^2.0.5",
     "element-plus": "^2.7.8",
     "vue": "^3.4.31"
@@ -33,5 +33,8 @@
     "lw-vue-plus",
     "components",
     "custom-components"
-  ]
+  ],
+  "dependencies": {
+    "@lw8/utils": "workspace:^"
+  }
 }
