--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,7 +9,11 @@
     "moduleResolution": "Node",
     "strict": true,
     "jsx": "preserve",
-    "types": ["vite/client", "element-plus/global"],
+    "types": [
+      "vite/client",
+      "element-plus/global",
+      "unplugin-vue-define-options/macros-global"
+    ],
     // 如果编译器无法根据变量的使用来判断类型时，将用 any类型代替
     // "suppressImplicitAnyIndexErrors": true,
     // 允许从没有设置默认导出的模块中默认导入。这并不影响代码的输出，仅为了类型检查。
