--- a/play/tsconfig.app.json
+++ b/play/tsconfig.app.json
@@ -20,5 +20,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "types": [
+    "@lw8/lw-vue-plus/es/components.d.ts"
+  ]
 }
