--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,5 +15,10 @@
   },
   "keywords": [],
   "author": "landwind",
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Twtcer/lw-vue-plus.git"
+  },
+  "homepage": "https://Twtcer.github.io/lw-vue-plus"
 }
